--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "dependencies": {
     "js-yaml": "^4.1.0",
     "mystmd": "^1.3.25"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.28.0",
+    "eslint": "^9.28.0",
+    "globals": "^16.2.0"
   }
 }
