--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "myst-curation",
   "version": "0.0.1",
+  "type": "module",
+  "license": "MIT",
   "dependencies": {
-    "js-yaml": "^4.1.0",
-    "mystmd": "^1.3.25"
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "esbuild": "^0.25.5",
     "eslint": "^9.28.0",
-    "globals": "^16.2.0"
+    "globals": "^16.2.0",
+    "mystmd": "^1.4.0"
+  },
+  "scripts": {
+    "build": "esbuild curation/curation.mjs --bundle --outfile=dist/curation.mjs --format=esm"
   }
 }
